# DontWasteYourTime-early-stopping

./: .gitignore  LICENSE  README.md  collect-all.sh  download.py  e1.py  generate_searchspaces.py  linear-cost-of-dataset-with-cv.py  openml_data.py  openml_suite_271.json  plots.sh  pyproject.toml  requirements.txt
src/exps/: data.py  footprint.py  methods.py  metrics.py  optimizers.py  parsable.py  pipelines.py  plots.py  seaborn2fig.py  slurm.py  tasks.py  util.py
src/exps/experiments/: exp1.py
